--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,39 @@
 
 .App-header {
   background-color: #222;
-  height: 150px;
+  height: 225px;
   padding: 20px;
   color: white;
 }
 
 .App-title {
+  font-size: 3em;
+  font-family: 'Merriweather', serif;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid orange; /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 4s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+/* @keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: orange; }
+} */
+
+.date {
+  font-family: 'Merriweather', serif;
+  letter-spacing: .07em;
   font-size: 1.5em;
 }
 
