--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,13 @@
 .App-header {
   background-color: #222;
   padding: 20px;
+  height: 80%;
   color: white;
 }
 
 .App-title {
-  margin-top: 10%;
+  margin-top: 7%;
+  margin-bottom: 7%;
 }
 
 .App-title h1 {
@@ -23,10 +25,16 @@
   border-right: .15em solid orange; /* The typwriter cursor */
   white-space: nowrap; /* Keeps the content on a single line */
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
-  letter-spacing: .15em; /* Adjust as needed */
+  letter-spacing: .2em; /* Adjust as needed */
   animation:
     typing 4s steps(40, end),
     blink-caret .75s step-end infinite;
+}
+
+.App-title h3 {
+  font-size: 1.1em;
+  font-weight: normal;
+  letter-spacing: .07em;
 }
 
 /* The typing effect */
@@ -49,15 +57,132 @@
 .time {
   font-family: 'Merriweather', serif;
   letter-spacing: .07em;
-  font-size: 1em;
+  font-size: 1.3em;
 }
 
 
 .App-intro {
+  margin-left: 27%;
+  margin-right: 27%;
   font-size: large;
+  color: #AAA;
+  opacity: 0.75;
 }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.viewMore {
+  margin: 0;
+}
+
+.viewMore svg {
+  color: white;
+  opacity: 0.6;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+  margin: 0;
+}
+
+.viewMore svg:hover {
+    color: white;
+    opacity: 1.0;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    /* ...and now for the proper property */
+    transition:.5s;
+    margin: 0;
+  }
+
+.viewMoreLabel {
+    margin: 0;
+    color: white;
+    opacity: 0.6;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    /* ...and now for the proper property */
+    transition:.5s;
+    letter-spacing: .15em;
+}
+
+.viewMoreLabel h6 {
+  color: white;
+  opacity: 0.6;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+
+}
+
+.viewMoreLabel h6:hover {
+  color: white;
+  opacity: 1.0;
+  -o-transition:.5s;
+  -ms-transition:.5s;
+  -moz-transition:.5s;
+  -webkit-transition:.5s;
+  /* ...and now for the proper property */
+  transition:.5s;
+}
+
+.hvr-sink {
+display: inline-block;
+vertical-align: middle;
+-webkit-transform: perspective(0px) translateZ(0);
+transform: perspective(0px) translateZ(0);
+box-shadow: 0 0 0px rgba(0, 0, 0, 0);
+-webkit-transition-duration: 0.3s;
+transition-duration: 0.3s;
+-webkit-transition-property: transform;
+transition-property: transform;
+-webkit-transition-timing-function: ease-out;
+transition-timing-function: ease-out;
+}
+.hvr-sink:hover, .hvr-sink:focus, .hvr-sink:active {
+-webkit-transform: translateY(6px);
+transform: translateY(6px);
+}
+
+
+nav .links-ul-left{
+  list-style-type: none;
+  float:left;
+  padding: 0%;
+  margin: 0%;
+}
+
+nav .links-ul-right{
+  list-style-type: none;
+  float: right;
+  padding: 0%;
+  margin: 0%;
+}
+
+.links-ul-left a:-webkit-any-link {
+  text-decoration: none;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #ccc;
+  opacity: 0.75;
+}
+
+.links-ul-right a:-webkit-any-link {
+  text-decoration: none;
+  font-size: 1.1em;
+  font-weight: bold;
+  color: #ccc;
+  opacity: 0.75;
 }
