create card-like effect with the post for funsies.

--- a/src/App.css
+++ b/src/App.css
@@ -198,4 +198,16 @@ nav .links-ul-right{
 
 i {
   padding: 5px;
+  margin-bottom: 5px;
+}
+
+.gridpost-component {
+  background-color: rgb(245, 245, 245);
+  padding: 10px;
+  border-radius: 0.5em;
+}
+
+.gridpost-title {
+  font-family: 'Merriweather', 'serif';
+  font-size: 1.5em;
 }
